--- a/igemScraper/build.gradle
+++ b/igemScraper/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.71'
 }
 
 group 'org.example'
@@ -32,4 +32,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.1'
+
+    // Kotlin serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
 }
