--- a/igemScraper/build.gradle
+++ b/igemScraper/build.gradle
@@ -35,4 +35,12 @@ dependencies {
 
     // Kotlin serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
+
+    // Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+
+    // Kotlin Fuel
+    implementation group: "com.github.kittinunf.fuel", name: "fuel", version: "2.2.2"
+    implementation group : "com.github.kittinunf.fuel", name: "fuel-coroutines", version: "2.2.2"
+    implementation group : "com.github.kittinunf.fuel", name: "fuel-kotlinx-serialization", version: "2.2.2"
 }
