--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
@@ -18,6 +19,7 @@
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"nodemon src/server/server.js\" ",
+    "front": "react-scripts start",
     "server": "nodemon src/server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
