--- a/igemScraper/build.gradle
+++ b/igemScraper/build.gradle
@@ -1,9 +1,14 @@
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.71'
+    id "com.github.johnrengelman.shadow" version "5.2.0"
 }
 
-group 'org.example'
+apply plugin: "application"
+mainClassName = "MainKt"
+
+group 'cz.wap'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
