--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             - '9400:3000'
             - '9401:3001'
         environment:
-            - ES_URL=http://elasticsearch
+            - ES_URL=elasticsearch:9200
     elasticsearch:
         image: 'docker.elastic.co/elasticsearch/elasticsearch:7.6.2'
         # Unpublish these ports to hide elastic search from public
