--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             - '9401:3001'
         environment:
             - ES_URL=elasticsearch:9200
+        restart: unless-stopped
     elasticsearch:
         image: 'docker.elastic.co/elasticsearch/elasticsearch:7.6.2'
         # Unpublish these ports to hide elastic search from public
