File saving created for running without db, opportunity to deploy react-app
Signed-off-by: Petr Kohout <xkohou14@stud.fit.vutbr.cz>

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "igem_api_team_seeker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://xkohou14.github.io/igem_api_team_seeker",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "async": "^3.2.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "elasticsearch": "^16.7.1",
@@ -18,10 +20,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-search-field": "^1.0.0"
+    "react-search-field": "^1.0.0",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"nodemon src/server/server.js\" ",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "start-both": "concurrently \"react-scripts start\" \"nodemon src/server/server.js\" ",
     "front": "react-scripts start",
     "server": "nodemon src/server/server.js",
     "build": "react-scripts build",
